<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackground">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar2" />
    <ScrollView
        android:layout_below="@id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_below="@+id/toolbar2"
            android:background="?attr/mainBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UnknownId">

            <ImageView
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <RelativeLayout
                android:elevation="-2dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ProgressBar
                    android:id="@+id/imageLoadingProgressBar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/errorLoadingImage"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:text="Error Loading this image!!!"
                    android:textColor="?attr/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/titleTextContainer"
                android:layout_below="@+id/imageContainer"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="TITLE"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="?attr/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/dateAndSourceContainer"
                android:layout_marginTop="10dp"
                android:layout_below="@id/titleTextContainer"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/publicationDateContainer"
                        android:layout_alignBottom="@id/authorAndSourceContainer"
                        android:layout_marginStart="15dp"
                        android:textSize="10sp"
                        android:layout_alignParentStart="true"
                        android:textColor="?attr/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/authorAndSourceContainer"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_alignParentEnd="true"
                                android:textAlignment="textEnd"
                                android:id="@+id/authorNameContainer"
                                android:text="Author Name"
                                android:textSize="10sp"
                                android:textColor="?attr/textColor"
                                android:layout_marginBottom="4dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_alignParentEnd="true"
                                android:textAlignment="textEnd"
                                android:id="@+id/sourceNameContainer"
                                android:text="Source Name"
                                android:textSize="10sp"
                                android:layout_below="@id/authorNameContainer"
                                android:textColor="?attr/textColor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="20dp"
                android:layout_below="@id/dateAndSourceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/descriptionContainer"
                    android:textColor="?attr/textColor"
                    android:textSize="12sp"
                    android:text="Description of the news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor="?attr/textColor"
                    android:text="Content of the news if available"
                    android:id="@+id/contentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/readMoreContainer"
                    android:textSize="14sp"
                    android:text="Show full article"
                    android:textColor="@color/teel_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>