<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfNewsContainer"
        android:layout_below="@id/toolbar"
        android:background="?attr/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>